# team-controller

./: Cargo.toml  config.json  teamlock.json
command_server/: Cargo.toml
command_server/examples/: helloworld.rs
command_server/src/: lib.rs
mjoy_core/: Cargo.toml
mjoy_core/src/: bindings.rs  joypaths.rs  main.rs  outjoy.rs  team_select.rs
mjoy_gui/src/gui/: feedback_info.rs  mod.rs
resources/: controller_names.txt
webapp/: app.py
webapp/templates/: index.html  success.html
